--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="nav-links">
                 <ul>
                     <li><a href="">Home</a></li>
-                    <li><a href="">Commission</a></li>
+                    <li><a href="https://www.deviantart.com/raviolimavioli/journal/COMMISSION-INFO-CLOSED-881091268">Commission</a></li>
                     <li><a href="">Portofolio</a></li>
                     <li><a href="">Linux-tan 2.0</a></li>
                     <li><a href="">Support</a></li>
@@ -30,16 +30,19 @@
         <h1>RavioliMavioli</h1>
         <p>I am Ravioli, an aspiring freelance artist and open-<br>source enthusiast. Welcome to my web page</p>
         <svg></svg><br>
-        <a href="" class="commission-btn">Commission Info</a>
+        <a href="https://www.deviantart.com/raviolimavioli/journal/COMMISSION-INFO-CLOSED-881091268" class="commission-btn">Commission Info</a>
         
         <div class="external-links"><br>
             <ul>
-                <li><a href=""><img src="resource/svg/Pixiv.svg"></a></li>
-                <li><a href=""><img src="resource/svg/instagram.svg"></a></li>
-                <li><a href=""><img src="resource/svg/twitter.svg"></a></li>
-                <li><a href=""><img src="resource/svg/Kofi.svg"></a></li>
+                <li><a href="https://www.pixiv.net/en/users/60562229"><img src="resource/svg/Pixiv.svg"></a></li>
+                <li><a href="https://www.instagram.com/raviolimavioli/"><img src="resource/svg/instagram.svg"></a></li>
+                <li><a href="https://twitter.com/raviolimavioli"><img src="resource/svg/twitter.svg"></a></li>
+                <li><a href="https://ko-fi.com/raviolimavioli"><img src="resource/svg/Kofi.svg"></a></li>
             </ul>
         </div>
+    </div>
+    <div class="Content">
+        <svg></svg><br>
     </div>
     </section>
 </body>
