--- a/index.html
+++ b/index.html
@@ -12,19 +12,6 @@
 </head>
 <body>
     <section class="header">
-        <nav>
-            <div class="nav-links">
-                <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="https://www.deviantart.com/raviolimavioli/journal/COMMISSION-INFO-CLOSED-881091268">Commission</a></li>
-                    <li><a href="">Portofolio</a></li>
-                    <li><a href="">Linux-tan 2.0</a></li>
-                    <li><a href="">Support</a></li>
-                </ul>
-            </div>
-        </nav>
-
-    
     <div class="Title">
         <img src="resource/png/manjaro icon.png">
         <h1>RavioliMavioli</h1>
@@ -45,5 +32,19 @@
         <svg></svg><br>
     </div>
     </section>
+
+    <div class="navbar">
+        <div class="navbrand"><a href="">RavioliMavioli</a></div>
+        <div class="navcenter">
+        <a href="https://www.deviantart.com/raviolimavioli/journal/COMMISSION-INFO-CLOSED-881091268">Commission</a>
+        <a href="">Portofolio</a>
+        <a href="">Linux-tan 2.0</a>
+        </div>
+        <div class="navsupport"><a href="https://ko-fi.com/raviolimavioli">Support</a></div>
+    </div>
+    <div class="content">
+        <svg></svg>
+    </div>
+
 </body>
 </html>
