--- a/index.html
+++ b/index.html
@@ -12,30 +12,30 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <script src="scroll.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 </head>
 <body>
-    <section class="header">
+    <section class="header" data-aos="fade-up">
     <div class="Title">
-        <img src="resource/png/manjaro icon.png">
-        <h1>RavioliMavioli</h1>
-        <p>I am Ravioli, an aspiring freelance artist and open-<br>source enthusiast. Welcome to my web page</p>
-        <svg></svg><br>
+        <img src="resource/png/manjaro icon.png" >
+        <h1 data-aos="fade-up">RavioliMavioli</h1>
+        <p data-aos="fade-up">I am Ravioli, an aspiring freelance artist and open-<br>source enthusiast. Welcome to my web page</p>
+        <svg data-aos="fade-up"></svg><br>
         <a href="https://www.deviantart.com/raviolimavioli/journal/COMMISSION-INFO-CLOSED-881091268" class="commission-btn">Commission Info</a>
         
         <div class="external-links"><br>
             <ul>
-                <li><a href="https://www.pixiv.net/en/users/60562229"><img src="resource/svg/Pixiv.svg"></a></li>
-                <li><a href="https://www.instagram.com/raviolimavioli/"><img src="resource/svg/instagram.svg"></a></li>
-                <li><a href="https://twitter.com/raviolimavioli"><img src="resource/svg/twitter.svg"></a></li>
-                <li><a href="https://ko-fi.com/raviolimavioli"><img src="resource/svg/Kofi.svg"></a></li>
+                <li><a href="https://www.pixiv.net/en/users/60562229" target="_blank"><img src="resource/svg/Pixiv.svg" id="Pixiv"></a></li>
+                <li><a href="https://www.instagram.com/raviolimavioli/" target="_blank"><img src="resource/svg/instagram.svg" id="Instagram"></a></li>
+                <li><a href="https://twitter.com/raviolimavioli" target="_blank"><img src="resource/svg/twitter.svg"></a></li>
+                <li><a href="https://github.com/RavioliMavioli" target="_blank"><img src="resource/svg/Github.svg"></a></li>
+                <li><a href="https://ko-fi.com/raviolimavioli" target="_blank"><img src="resource/svg/Kofi.svg"></a></li>
             </ul>
         </div>
-    </div>
-    <div class="Content">
-        <svg></svg><br>
     </div>
     </section>
 
@@ -51,21 +51,33 @@
         </script>
 
 
-        <div class="navbrand"><a href="#">RavioliMavioli</a></div>
-        <div class="navcenter">
-            <a href="https://www.deviantart.com/raviolimavioli/journal/COMMISSION-INFO-CLOSED-881091268">Commission</a>
-            <a href="#1" onclick="scrollToTargetAdjusted('portofolioSection',100)">Portofolio</a>
-            <a href="">Linux-tan 2.0</a>
+        <div class="navbrand" data-aos="fade-up"><a href="#">RavioliMavioli</a></div>
+        <div class="navcenter" data-aos="fade-up">
+            <a href target="_blank"="https://www.deviantart.com/raviolimavioli/journal/COMMISSION-INFO-CLOSED-881091268">Commission</a>
+            <a href="#1" onclick="scrollToTargetAdjusted('portofolioSection',100)">Portfolio</a>
+            <a href="#1" onclick="scrollToTargetAdjusted('portofolioSection',100)">Linux-tan 2.0</a>
         </div>
-        <div class="navsupport"><a href="https://ko-fi.com/raviolimavioli">Support</a></div>
+        <div class="navsupport" data-aos="fade-up"><a href="https://ko-fi.com/raviolimavioli" target="_blank">Support</a></div>
     </div>
-    <div class="content">
+    <div class="content" data-aos="fade-up">
         <section class="portofolio" id="portofolioSection">
-            <h1>Portofolio</h1>
+            <p data-aos="fade-up">The page is still under construction :)</p>
             <svg></svg>
         </section>
     </div>
 
-    
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        delay: 0, // values from 0 to 3000, with step 50ms
+        duration: 1000, // values from 0 to 3000, with step 50ms
+        easing: 'ease', // default easing for AOS animations
+        once: false, // whether animation should happen only once - while scrolling down
+        mirror: false, // whether elements should animate out while scrolling past them
+        anchorPlacement: 'top-bottom', // defines which position of the element regarding to window should trigger the animation\
+        once: true
+
+});
+    </script>
 </body>
 </html>
