--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 <body>
     <section class="header" data-aos="fade-up">
     <div class="Title">
-        <img src="resource/png/manjaro icon.png" >
-        <h1 data-aos="fade-up">RavioliMavioli</h1>
-        <p data-aos="fade-up">I am Ravioli, an aspiring freelance artist and open-<br>source enthusiast. Welcome to my web page</p>
-        <svg data-aos="fade-up"></svg><br>
-        <a href="https://www.deviantart.com/raviolimavioli/journal/COMMISSION-INFO-CLOSED-881091268" class="commission-btn">Commission Info</a>
+        <img src="resource/png/manjaro icon.png" data-aos="fade-up" data-aos-delay=100>
+        <h1 data-aos="fade-up" data-aos-delay=200>RavioliMavioli</h1>
+        <p data-aos="fade-up" data-aos-delay=300>I am Ravioli, an aspiring freelance artist and open-<br>source enthusiast. Welcome to my web page</p>
+        <svg data-aos="fade-up" data-aos-delay=400></svg><br>
+        <a href="https://www.deviantart.com/raviolimavioli/journal/COMMISSION-INFO-CLOSED-881091268" class="commission-btn" data-aos="fade-up" data-aos-delay=500>Commission Info</a>
         
-        <div class="external-links"><br>
+        <div class="external-links" data-aos="fade-up" data-aos-delay=600><br>
             <ul>
                 <li><a href="https://www.pixiv.net/en/users/60562229" target="_blank"><img src="resource/svg/Pixiv.svg" id="Pixiv"></a></li>
                 <li><a href="https://www.instagram.com/raviolimavioli/" target="_blank"><img src="resource/svg/instagram.svg" id="Instagram"></a></li>
@@ -53,7 +53,7 @@
 
         <div class="navbrand" data-aos="fade-up"><a href="#">RavioliMavioli</a></div>
         <div class="navcenter" data-aos="fade-up">
-            <a href target="_blank"="https://www.deviantart.com/raviolimavioli/journal/COMMISSION-INFO-CLOSED-881091268">Commission</a>
+            <a href ="https://www.deviantart.com/raviolimavioli/journal/COMMISSION-INFO-CLOSED-881091268" target="_blank">Commission</a>
             <a href="#1" onclick="scrollToTargetAdjusted('portofolioSection',100)">Portfolio</a>
             <a href="#1" onclick="scrollToTargetAdjusted('portofolioSection',100)">Linux-tan 2.0</a>
         </div>
@@ -69,6 +69,7 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init({
+        offset: -100,
         delay: 0, // values from 0 to 3000, with step 50ms
         duration: 1000, // values from 0 to 3000, with step 50ms
         easing: 'ease', // default easing for AOS animations
