--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 
 </head>
 <body>
-    <section class="header" data-aos="fade-up">
+    <section class="header">
     <div class="Title">
-        <img src="resource/png/manjaro icon.png" data-aos="fade-up" data-aos-delay=100>
-        <h1 data-aos="fade-up" data-aos-delay=200>RavioliMavioli</h1>
-        <p data-aos="fade-up" data-aos-delay=300>I am Ravioli, an aspiring freelance artist and open-<br>source enthusiast. Welcome to my web page</p>
-        <svg data-aos="fade-up" data-aos-delay=400></svg><br>
-        <a href="https://www.deviantart.com/raviolimavioli/journal/COMMISSION-INFO-CLOSED-881091268" class="commission-btn" data-aos="fade-up" data-aos-delay=500>Commission Info</a>
+        <img src="resource/png/manjaro icon.png">
+        <h1>RavioliMavioli</h1>
+        <p>I am Ravioli, an aspiring freelance artist and open-<br>source enthusiast. Welcome to my web page</p>
+        <svg></svg><br>
+        <a href="https://www.deviantart.com/raviolimavioli/journal/COMMISSION-INFO-CLOSED-881091268" class="commission-btn">Commission Info</a>
         
-        <div class="external-links" data-aos="fade-up" data-aos-delay=600><br>
+        <div class="external-links"><br>
             <ul>
                 <li><a href="https://www.pixiv.net/en/users/60562229" target="_blank"><img src="resource/svg/Pixiv.svg" id="Pixiv"></a></li>
                 <li><a href="https://www.instagram.com/raviolimavioli/" target="_blank"><img src="resource/svg/instagram.svg" id="Instagram"></a></li>
@@ -69,7 +69,7 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init({
-        offset: -100,
+        offset:-75,
         delay: 0, // values from 0 to 3000, with step 50ms
         duration: 1000, // values from 0 to 3000, with step 50ms
         easing: 'ease', // default easing for AOS animations
