--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 </head>
 <body>
-    <section class="header">
+    <section class="header" data-aos="fade-up">
     <div class="Title">
         <img src="resource/png/manjaro icon.png">
         <h1>RavioliMavioli</h1>
