--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
             </div>
         </div>
-        <div class="text-normal" data-aos="fade-up"><p>More can be found on my social media</p></div>
+        <div class="text-normal" data-aos="fade-up"><p><br>More can be found on my social media</p></div>
         <div id="commission">
             <div class="text-title" data-aos="fade-up"><p>Commission</p></div>
 
