--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     </div>
     
     <!--Import files and libaries-->
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-9">
-    <title>RavioliMavioli Commission</title>
+    <title>RavioliMavioli</title>
     <link rel="stylesheet" href="title.css">
     <link rel="stylesheet" href="content.css">
     <link rel="stylesheet" href="linux-2.css">
