Added Google Analytic

--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
         <span class="pac-man"></span>
         <div class="loading-text"><p>Loading assets...</p></div>
     </div>
-    
+
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DWS4BVZHCP"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-DWS4BVZHCP');
+    </script>
+
+
     <!--Import files and libaries-->
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-9">
