--- a/index.html
+++ b/index.html
@@ -7,22 +7,21 @@
     <!--But since this is licensed under GPL, feel free to do anything under the license-->
 <html lang="en">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FZP9QSS9HW"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-FZP9QSS9HW');
+    </script>
+    
     <!--Page loading animation-->
     <div class="loader-wrapper">
         <span class="pac-man"></span>
         <div class="loading-text"><p>Loading assets...</p></div>
     </div>
-
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DWS4BVZHCP"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-DWS4BVZHCP');
-    </script>
 
 
     <!--Import files and libaries-->
