--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <!--Anyway, thank you for visiting and pressing the inspect element, or maybe you cloned this code-->
     <!--Which idk why would you do that since the code is basically a baked spaghetti-->
     <!--But since this is licensed under GPL, feel free to do anything under the license-->
+
+    <!--LIBRARY AND SCRIPT USED-->
+    <!--Pacman-loading animation    : https://codepen.io/iddar/pen/xwXowq -->
+    <!--Scrolling script            : https://stackoverflow.com/questions/49820013/javascript-scrollintoview-smooth-scroll-and-offset -->
+    <!--Lightbox                    : https://github.com/lokesh/lightbox2 -->
+    <!--jQuerry                     : https://github.com/jquery/jquery -->
+    <!--Google Analytics            : https://analytics.google.com/ -->
+
 <html lang="en">
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -17,33 +25,34 @@
       gtag('config', 'G-FZP9QSS9HW');
     </script>
     
-    <!--Page loading animation-->
-    <div class="loader-wrapper">
-        <span class="pac-man"></span>
-        <div class="loading-text"><p>Loading assets...</p></div>
-    </div>
-
-
     <!--Import files and libaries-->
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-9">
     <title>RavioliMavioli</title>
-    <link rel="stylesheet" href="title.css">
-    <link rel="stylesheet" href="content.css">
-    <link rel="stylesheet" href="linux-2.css">
-    <link rel="stylesheet" href="loader.css">
-    <link rel="stylesheet" href="support.css">
+    <link rel="stylesheet" href="css/title.css">
+    <link rel="stylesheet" href="css/content.css">
+    <link rel="stylesheet" href="css/linux-2.css">
+    <link rel="stylesheet" href="css/loader.css">
+    <link rel="stylesheet" href="css/support.css">
+    <link rel="stylesheet" href="css/lightbox.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
-    <script src="scroll.js"></script>
+    <script src="js/scroll.js"></script>
+    <script src="js/lightbox-plus-jquery.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 </head>
 <body>
+    <!--Page loading animation-->
+    <div class="loader-wrapper">
+        <span class="pac-man"></span>
+        <div class="loading-text"><p>Loading assets...</p></div>
+    </div>
+
     <section class="header" data-aos="fade-up" loading="lazy">
     <div class="Title">
         <img src="resource/png/manjaro icon.png" loading="lazy">
@@ -69,7 +78,7 @@
         <div class="navcenter" data-aos="fade-up" data-aos-once=true>
             <a href="#1" onclick="scrollToTargetAdjusted('portfolio',75)">Portfolio</a>
             <a href="#2" onclick="scrollToTargetAdjusted('commission',75)">Commission</a>
-            <a href="#3" onclick="scrollToTargetAdjusted('linux-tan',75)">Linux-tan 2.0</a>
+            <a id="navlinux" href="#3" onclick="scrollToTargetAdjusted('linux-tan',75)">Linux-tan 2.0</a>
         </div>
         <div class="navsupport" data-aos="fade-up" data-aos-once=true><a href="https://ko-fi.com/raviolimavioli" target="_blank">Support</a></div>
     </div>
@@ -79,37 +88,53 @@
             <div class="portfolio-container">
 
                 <div class="portfolio-gallery-item" data-aos="zoom-in" data-aos-delay=0>
-                    <div class="portfolio-images"><img src="resource/png/portfolio/big/1.jpg" loading="lazy"></div>
+                    <div class="portfolio-images" >
+                        <a href="resource/png/portfolio/big/1.jpg" data-lightbox="rav-portfolio"><img src="resource/png/portfolio/big/1.jpg" loading="lazy"></a>
+                    </div>
                 </div>
                 
-                <div class="portfolio-gallery-item" data-aos="zoom-in" data-aos-delay=50>
-                    <div class="portfolio-images"><img src="resource/png/portfolio/big/2.jpg" loading="lazy"></div>
-                </div>
-
-                <div class="portfolio-gallery-item" data-aos="zoom-in" data-aos-delay=100>
-                    <div class="portfolio-images"><img src="resource/png/portfolio/big/3.png" loading="lazy"></div>
-                </div>
-
-                <div class="portfolio-gallery-item" data-aos="zoom-in" data-aos-delay=150>
-                    <div class="portfolio-images"><img src="resource/png/portfolio/big/4.png" loading="lazy"></div>
+                <div class="portfolio-gallery-item" data-aos="zoom-in" data-aos-delay=0>
+                    <div class="portfolio-images" >
+                        <a href="resource/png/portfolio/big/2.jpg" data-lightbox="rav-portfolio"><img src="resource/png/portfolio/big/2.jpg" loading="lazy"></a>
+                    </div>
                 </div>
 
                 <div class="portfolio-gallery-item" data-aos="zoom-in" data-aos-delay=0>
-                    <div class="portfolio-images"><img src="resource/png/portfolio/big/5.jpg" loading="lazy"></div>
+                    <div class="portfolio-images" >
+                        <a href="resource/png/portfolio/big/3.png" data-lightbox="rav-portfolio"><img src="resource/png/portfolio/big/3.png" loading="lazy"></a>
+                    </div>
                 </div>
 
-                <div class="portfolio-gallery-item" data-aos="zoom-in" data-aos-delay=50>
-                    <div class="portfolio-images"><img src="resource/png/portfolio/big/6.png" loading="lazy"></div>
+                <div class="portfolio-gallery-item" data-aos="zoom-in" data-aos-delay=0>
+                    <div class="portfolio-images" >
+                        <a href="resource/png/portfolio/big/4.png" data-lightbox="rav-portfolio"><img src="resource/png/portfolio/big/4.png" loading="lazy"></a>
+                    </div>
                 </div>
 
-                <div class="portfolio-gallery-item" data-aos="zoom-in" data-aos-delay=100>
-                    <div class="portfolio-images"><img src="resource/png/portfolio/big/7.png" loading="lazy"></div>
+                <div class="portfolio-gallery-item" data-aos="zoom-in" data-aos-delay=0>
+                    <div class="portfolio-images" >
+                        <a href="resource/png/portfolio/big/5.jpg" data-lightbox="rav-portfolio"><img src="resource/png/portfolio/big/5.jpg" loading="lazy"></a>
+                    </div>
                 </div>
 
-                <div class="portfolio-gallery-item" data-aos="zoom-in" data-aos-delay=150>
-                    <div class="portfolio-images"><img src="resource/png/portfolio/big/8.png" loading="lazy"></div>
+                <div class="portfolio-gallery-item" data-aos="zoom-in" data-aos-delay=0>
+                    <div class="portfolio-images" >
+                        <a href="resource/png/portfolio/big/6.png" data-lightbox="rav-portfolio"><img src="resource/png/portfolio/big/6.png" loading="lazy"></a>
+                    </div>
                 </div>
-            </div>
+
+                <div class="portfolio-gallery-item" data-aos="zoom-in" data-aos-delay=0>
+                    <div class="portfolio-images" >
+                        <a href="resource/png/portfolio/big/7.png" data-lightbox="rav-portfolio"><img src="resource/png/portfolio/big/7.png" loading="lazy"></a>
+                    </div>
+                </div>
+
+                <div class="portfolio-gallery-item" data-aos="zoom-in" data-aos-delay=0>
+                    <div class="portfolio-images" >
+                        <a href="resource/png/portfolio/big/8.png" data-lightbox="rav-portfolio"><img src="resource/png/portfolio/big/8.png" loading="lazy"></a>
+                    </div>
+                </div>
+
         </div>
         <div class="text-normal" data-aos="fade-up"><p><br>More can be found on my social media</p></div>
         <div id="commission">
