Bux fix and added footer

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="navcenter" data-aos="fade-up" data-aos-once=true>
             <a onclick="scrollToTargetAdjusted('portfolio',75)">Portfolio</a>
             <a onclick="scrollToTargetAdjusted('commission',75)">Commission</a>
-            <a id="navlinux" onclick="scrollToTargetAdjusted('linux-tan',330)">Linux-tan 2.0</a>
+            <a id="navlinux" onclick="scrollToTargetAdjusted('linux-tan',0)">Linux-tan 2.0</a>
         </div>
         <div class="navsupport box-bold" data-aos="fade-up" data-aos-once=true><a href="https://ko-fi.com/raviolimavioli" target="_blank">Support</a></div>
     </div>
@@ -205,13 +205,9 @@
             </div>
         </div>
         <div id="linux-tan">
-            <div class="text-normal" data-aos="fade-up"><p>This site is still under construction, sorry for the inconvenience.</p></div>
+            <div class="C text-normal" data-aos="fade-up"><p>This site is still under construction, sorry for the inconvenience.</p></div>
         </div>
-        <footer class="box-bold" data-aos="fade-up">
-            <div class="B text-normal"><p>©Copyright RavioliMavioli<br><br><br></p></div>
-            <div class="B text-normal"><p>♥ Made with love and passion from pure HTML/CSS and JavaScript ♥</p></div>
-            <div class="B text-normal"><p>Thank you for visiting!</p></div>
-        </footer>
+        
     <!--Page loading animation when loading is complete-->
     <script>
         $(window).on("load", function(){
@@ -231,7 +227,12 @@
         mirror: false,
         anchorPlacement: 'top-bottom'
 
-});
+        });
     </script>
 </body>
+<footer class="shad-bold">
+    <div class="B text-normal"><p>©Copyright RavioliMavioli<br><br><br></p></div>
+    <div class="B text-normal"><p>♥ Made with love and passion from pure HTML/CSS and JavaScript ♥</p></div>
+    <div class="B text-normal"><p>Thank you for visiting!</p></div>
+</footer>
 </html>
