Added total price

--- a/index.html
+++ b/index.html
@@ -199,7 +199,11 @@
                             <a id="BLURRY" onclick="BgAnimate('BLURRY')"><p class="box-bold">Blur</p></a>
                             <a id="DETAILED" onclick="BgAnimate('DETAILED')"><p class="box-bold">Detailed</p></a>
                         </div>
-                        <div class="A text-normal" data-aos="fade-up" data-aos-delay="200"><p>Commission is closed for a moment. Visit here again in the next few weeks!</p></div>            
+                        <div class="total-price-container" data-aos="fade-up" data-aos-delay="200">
+                            <p>The total price is:</p>
+                            <div class="total-price-number shad-bold"></div>
+                        </div>
+                        <div class="A text-normal" data-aos="fade-up" data-aos-delay="250"><p>Commission is closed for a moment. Visit here again in the next few weeks!</p></div>            
                     </div>
                 </div>
             </div>
