Added commercial multiplier

--- a/index.html
+++ b/index.html
@@ -199,13 +199,20 @@
                             <a id="BLURRY" onclick="BgAnimate('BLURRY')"><p class="box-bold">Blur</p></a>
                             <a id="DETAILED" onclick="BgAnimate('DETAILED')"><p class="box-bold">Detailed</p></a>
                         </div>
-                        <div class="total-price-container" data-aos="fade-up" data-aos-delay="200">
+                        <div class="commercial-container text-normal" data-aos="fade-up" data-aos-delay="200">
+                            <a class="commercial-check-1 box-bold" onclick="Commercial()"></a>
+                            <div class="commercial-check-2"><p>Commercial purpose</p></div>
+                        </div>
+                        <div class="total-price-container" data-aos="fade-up" data-aos-delay="250">
                             <p>The total price is:</p>
                             <div class="total-price-number shad-bold"></div>
                         </div>
-                        <div class="A text-normal" data-aos="fade-up" data-aos-delay="250"><p>Commission is closed for a moment. Visit here again in the next few weeks!</p></div>            
+                        <div class="A text-normal" data-aos="fade-up" data-aos-delay="300"><p>Commission is closed for a moment. Visit here again in the next few weeks!</p></div>            
                     </div>
                 </div>
+            </div>
+            <div class="ter">
+
             </div>
         </div>
         <div id="linux-tan">
@@ -235,8 +242,11 @@
     </script>
 </body>
 <footer class="shad-bold">
-    <div class="B text-normal"><p>©Copyright RavioliMavioli<br><br><br></p></div>
-    <div class="B text-normal"><p>♥ Made with love and passion from pure HTML/CSS and JavaScript ♥</p></div>
-    <div class="B text-normal"><p>Thank you for visiting!</p></div>
+    <div class="B text-normal"><p>©Copyright RavioliMavioli<br><br></p></div>
+    
+    <div class="B text-normal"><p>♥Made by me with love and passion♥</p></div>
+    <div class="B text-normal"><p>Powered by pure HTML/CSS and JavaScript<br><br></p></div>
+
+    <div class="B text-normal"><p>Contact: @raviolimavioli008@gmail.com</p></div>
 </footer>
 </html>
