--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
-    <!--Welcome to the RavoliMavioli's first bloated website!-->
-    <!--Damn, it was such a pain to design this thing with pure HTML CSS and few Javascript-->
-    <!--Few libraries were also used because I'm too lazy do it on my own-->
-    <!--Anyway, thank you for visiting and pressing the inspect element, or maybe you cloned this code via my GitHub-->
+    <!--Thank you for visiting and pressing the inspect element, or maybe you cloned this code via my GitHub-->
     <!--                                                                                 -->
-    <!--The web's GitHub sourcecode : https://github.com/RavioliMavioli/RavioliMavioli.github.io -->
+    <!--Source code : https://github.com/RavioliMavioli/RavioliMavioli.github.io -->
     <!--                                                                                 -->
     <!--LIBRARY AND SCRIPT USED-->
     <!--                                                                                 -->
@@ -13,6 +10,15 @@
     <!--Lightbox                    : https://github.com/lokesh/lightbox2 -->
     <!--Google Analytics            : https://analytics.google.com/ -->
     <!--Scrolling script            : https://stackoverflow.com/questions/49820013/javascript-scrollintoview-smooth-scroll-and-offset -->
+    <!--                                                                                 -->
+    <!--Developer/Artist note:-->
+    <!--                                                                                 -->
+    <!--This website was planned to be built using carrd.co. But I realized there were so many limitations, locked by paywalls-->
+    <!--Then I tried Worldpress, instantly regret it-->
+    <!--The next option was to use a framework which involves coding, but I had to learn the framework syntax and functions-->
+    <!--So fuck it, I am gonna build it from scratch.-->
+    <!--                                                                                 -->
+    <!--Sincerely, RavioliMavioli-->
 
 <html lang="en">
 <head>
@@ -30,9 +36,8 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-9">
     <title>RavioliMavioli</title>
-    <link rel="stylesheet" href="css/title.css">
+    <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/content.css">
-    <link rel="stylesheet" href="css/linux-2.css">
     <link rel="stylesheet" href="css/loader.css">
     <link rel="stylesheet" href="css/support.css">
     <link rel="stylesheet" href="css/lightbox.css">
@@ -57,7 +62,8 @@
         <div class="loading-text"><p>Loading assets...</p></div>
     </div>
     <!--Header section (Icon, title, etc)-->
-    <section id="landing" class="header" data-aos="fade-up" loading="lazy">
+    <div id="landing" class="header" data-aos="fade-up" loading="lazy">
+    <div id="header-img" class="header"></div>
     <div class="Title">
         <img src="resource/image/manjaro icon.png" class="shad-mid">
         <h1>RavioliMavioli</h1>
@@ -75,7 +81,7 @@
             </ul>
         </div>
     </div>
-    </section>
+    </div>
 
     <!--Sticky navbar-->
     <div class="navbar box-mid">
@@ -83,9 +89,9 @@
         <div class="navcenter" data-aos="fade-up" data-aos-once=true>
             <a onclick="scrollToTargetAdjusted('portfolio',75)">Portfolio</a>
             <a onclick="scrollToTargetAdjusted('commission',75)">Commission</a>
-            <a id="navlinux" onclick="scrollToTargetAdjusted('linux-tan',0)">Linux-tan 2.0</a>
+            <a id="navlinux" onclick="scrollToTargetAdjusted('tos',75)">Terms of Service</a>
         </div>
-        <div class="navsupport box-bold" data-aos="fade-up" data-aos-once=true><a href="https://ko-fi.com/raviolimavioli" target="_blank">Support</a></div>
+        <div class="navsupport box-bold" data-aos="fade-up" data-aos-once=true><a onclick="scrollToTargetAdjusted('support',75)" target="_blank">Support</a></div>
     </div>
 
 
@@ -151,11 +157,12 @@
         <!--Comission section-->
         <div id="commission">
             <div class="text-title" data-aos="fade-up"><p>Commission</p></div>
+            <!-- This was the most hardest script to make-->
             <div class="region-container" data-aos="fade-up">
                 <a id="Outdonesia" class="animation-change-color-region box-bold" onclick="Region('Outdonesia')"><p>USD</p></a>
                 <a id="Indonesia" class="box-bold" onclick="Region('Indonesia')"><p>IDR</p></a>
             </div>
-            <!-- This was the hardest section to make (for me), the conditional animated cropping line -->
+            <!-- This was the second hardest script to make-->
             <div class="commission-container animation-halfbody">
                 <div class="commission-container-left" data-aos="fade-up"><div class="img-solidcolor"></div><div class="img-detailed"></div><div class="img-blurry"></div><div class="img-simple"></div><div class="img-arch"></div>
                     <div class="dynamic-price-container">
@@ -180,10 +187,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="commission-container-right">
+                <div class="commission-container-right" data-aos="fade-up">
                     <div class="parts-container">
-                        <div class="parts-header text-normal" data-aos="fade-up"><p>Body parts</p></div>
-                        <div class="parts-lists" data-aos="fade-up" data-aos-delay="50">
+                        <div class="parts-header text-normal"><p>Body parts</p></div>
+                        <div class="parts-lists">
 
                             <!-- I had a eurika moment when I figured it out how to do the script of this section -->
                             <a id="HEADSHOT" onclick="CropAnimate('HEADSHOT'), scrollToTargetAdjusted('commission',-10)"><p class="box-bold">Headshot</p></a>
@@ -192,31 +199,93 @@
                             <a id="KNEEUP" onclick="CropAnimate('KNEEUP'), scrollToTargetAdjusted('commission',-100)"><p class="box-bold">Knee-up</p></a>
                             <a id="FULLBODY" onclick="CropAnimate('FULLBODY'), scrollToTargetAdjusted('commission',-200)"><p class="box-bold">Fullbody</p></a>
                         </div>
-                        <div class="background-header text-normal" data-aos="fade-up" data-aos-delay="100"><p>Background</p></div>
-                        <div class="background-lists" data-aos="fade-up" data-aos-delay="150">
+                        <div class="background-header text-normal"><p>Background</p></div>
+                        <div class="background-lists">
                             <a id="SOLIDCOLOR" class="animation-change-color-bg" onclick="BgAnimate('SOLIDCOLOR')"><p class="box-bold">Solid Color</p></a>
                             <a id="SIMPLE" onclick="BgAnimate('SIMPLE')"><p class="box-bold">Simple</p></a>
                             <a id="BLURRY" onclick="BgAnimate('BLURRY')"><p class="box-bold">Blur</p></a>
                             <a id="DETAILED" onclick="BgAnimate('DETAILED')"><p class="box-bold">Detailed</p></a>
                         </div>
-                        <div class="commercial-container text-normal" data-aos="fade-up" data-aos-delay="200">
+                        <div class="commercial-container text-normal">
                             <a class="commercial-check-1 box-bold" onclick="Commercial()"></a>
                             <div class="commercial-check-2"><p>Commercial purpose</p></div>
                         </div>
-                        <div class="total-price-container" data-aos="fade-up" data-aos-delay="250">
+                        <div class="total-price-container">
                             <p>The total price is:</p>
                             <div class="total-price-number shad-bold"></div>
                         </div>
-                        <div class="A text-normal" data-aos="fade-up" data-aos-delay="300"><p>Commission is closed for a moment. Visit here again in the next few weeks!</p></div>            
                     </div>
                 </div>
             </div>
-            <div class="ter">
-
+            <div class="canvas">
+                <div class="text-normal" data-aos="fade-up"><p>Select the canvas size</p></div>
+                <div class="canvas-container" data-aos="fade-up">
+                    <a id="A3PORTRAIT" onclick="Canvas('A3PORTRAIT')"><p>A3 Portrait</p></a>
+                    <a id="SQUARE" onclick="Canvas('SQUARE')"><p>Square</p></a>
+                    <a id="A3LANDSCAPE" onclick="Canvas('A3LANDSCAPE')"><p>A3 Landscape</p></a>
+                    <a id="WIDESCREEN" onclick="Canvas('WIDESCREEN')"><p>Widescreen (5k)</p></a>
             </div>
         </div>
-        <div id="linux-tan">
-            <div class="C text-normal" data-aos="fade-up"><p>This site is still under construction, sorry for the inconvenience.</p></div>
+        <div id="tos">
+            <div class="text-title" data-aos="fade-up"><p>Terms of Service</p></div>
+            <div id="tos-img">                
+                <div class="tos-container text-header">
+                    <div class="general text-lists" data-aos="fade-up"> <p>General</p><br>
+                        <div class="tos-list-container box-mid">
+                            <ul>
+                                <li>Only 1 character.</li>
+                                <li>Strictly No Echi and or NSFW.</li>
+                                <li>No humongous oppai and or thicc thighs.</li>
+                                <li>Not accepting Chiby, Mecha, Furry, Old Character, Weird Fetishes (sorry, I didn't mean to kinkshame you), Complex Poses, Complex Background, Controversial Topic, and Realistic Style.</li>
+                                <li>No deadlines or rushes.</li>
+                            </ul>
+                        </div>
+                    </div><br>
+                    <div class="payment text-lists" data-aos="fade-up"> <p>Payment</p><br>
+                        <div class="tos-list-container box-mid">
+                            <ul>
+                                <li>Only pay when I accept your commission. Any payment beforehand is considered as donation.</li>
+                                <li> Upfront payment:
+                                    <ul><br>
+                                        <li style="margin-left:20px;">First, 30% of the total price for the sketch.</li>
+                                        <li style="margin-left:20px;">Second, 40% of the total price for the base shading.</li>
+                                        <li style="margin-left:20px;">Third, 30% of the total price for the final render.</li>
+                                    </ul>
+                                </li><br>
+                                <li>Payment via  <span class="highlight-1">PayPal</span>   (International) or  <span class="highlight-2">BRI/DANA/OVO</span>  (Local).</li>
+                                <li>I may cancel or refuse your commission due to any reason.</li>
+                            </ul>
+                        </div>
+                    </div><br>
+                    <div class="final-artwork text-lists" data-aos="fade-up"> <p>Final Artwork</p><br>
+                        <div class="tos-list-container box-mid">
+                            <ul>
+                                <li>Final artworks will be sent after you send the full payment.</li>
+                                <li>Final artworks will be sent in the form of PNG at a full resolution with the source file.</li>
+                                <li>Final artworks will be sent via email.</li>
+                                <li>Final artworks will be uploaded to my Instagram, Pixiv, DeviantArt, and other social media at 30% resolution with the addition of watermarks under clients permission.</li>
+                            </ul>
+                        </div>
+                    </div><br>
+                    <div class="copyright text-lists" data-aos="fade-up"> <p>Copyright</p><br>
+                        <div class="tos-list-container box-mid">
+                            <ul>
+                                <li>Both the artist (me) and the client (you) should retain the Copyrights.</li>
+                                <li>You are free to redistribute the artworks.</li>
+                                <li>Unless you choose the "Commercial" category, DO NOT sell or make any profit from the artworks.</li>
+                                <li>Please do not claim that you drew the commissioned artworks.</li>
+                            </ul>
+                        </div>
+                    </div><br>
+                </div>
+            </div>        
+        </div>
+        <div id="support">
+            <div class="text-title" data-aos="fade-up"><p>Support</p></div>
+            <div class="C text-normal" data-aos="fade-up">
+                <p>This site is still under construction, sorry for the inconvenience.</p><br>
+                <p>For the mean time, you can support me via Ko-fi <a target="_blank" href="https://ko-fi.com/raviolimavioli" class="highlight-2">here</a></p>
+            </div>
         </div>
         
     <!--Page loading animation when loading is complete-->
@@ -242,11 +311,11 @@
     </script>
 </body>
 <footer class="shad-bold">
-    <div class="B text-normal"><p>©Copyright RavioliMavioli<br><br></p></div>
+    <div class="B text-normal opacity-mid"><p>Copyright © RavioliMavioli<br><br></p></div>
     
-    <div class="B text-normal"><p>♥Made by me with love and passion♥</p></div>
+    <div class="B text-normal"><p>♥ Created by RavioliMavioli with love and passion ♥</p></div>
     <div class="B text-normal"><p>Powered by pure HTML/CSS and JavaScript<br><br></p></div>
 
-    <div class="B text-normal"><p>Contact: @raviolimavioli008@gmail.com</p></div>
+    <div class="B text-normal opacity-mid"><p>Contact: @raviolimavioli008@gmail.com</p></div>
 </footer>
 </html>
