Added Google Form Integration

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                             <a id="BLURRY" onclick="BgAnimate('BLURRY')"><p class="box-bold">Blur</p></a>
                             <a id="DETAILED" onclick="BgAnimate('DETAILED')"><p class="box-bold">Detailed</p></a>
                         </div>
-                        <div class="commercial-container text-normal">
+                        <div class="commercial-container">
                             <a class="commercial-check-1 box-bold" onclick="Commercial()"></a>
                             <div class="commercial-check-2"><p>Commercial purpose</p></div>
                         </div>
@@ -278,13 +278,22 @@
                         </div>
                     </div><br>
                 </div>
+                <div class="agree-container" data-aos="fade-up">
+                    <a class="agree-check-1 box-bold" onclick="Agree()"></a>
+                    <div class="agree-check-2"><p>I agree with the terms above.</p></div>
+                    
+                </div><br><br>
+                <div data-aos="fade-up">
+                    <a class="order-btn-enabled box-bold" onclick="ForwardToForm()">Order now</a>
+                    <a class="order-btn-disabled box-bold">Order now</a>
+                </div>
             </div>        
-        </div>
+        </div><br><br><br><br><br><br>
         <div id="support">
             <div class="text-title" data-aos="fade-up"><p>Support</p></div>
             <div class="C text-normal" data-aos="fade-up">
                 <p>This site is still under construction, sorry for the inconvenience.</p><br>
-                <p>For the mean time, you can support me via Ko-fi <a target="_blank" href="https://ko-fi.com/raviolimavioli" class="highlight-2">here</a></p>
+                <p>In the mean time, you can support me via Ko-fi <a target="_blank" href="https://ko-fi.com/raviolimavioli" class="highlight-2">here</a></p>
             </div>
         </div>
         
