--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
                     <div class="general text-lists" data-aos="fade-up"> <p>General</p><br>
                         <div class="tos-list-container box-mid">
                             <ul>
+                                <li>Female Only.</li>
                                 <li>Only 1 character.</li>
                                 <li>Strictly No Echi and or NSFW.</li>
                                 <li>No humongous oppai and or thicc thighs.</li>
@@ -272,7 +273,7 @@
                             <ul>
                                 <li>Both the artist (me) and the client (you) should retain the Copyrights.</li>
                                 <li>You are free to redistribute the artworks.</li>
-                                <li>Unless you choose the "Commercial" category, DO NOT sell or make any profit from the artworks.</li>
+                                <li>Unless you choose the "Commercial" category, <b>DO NOT</b> sell or make any profit from the artworks.</li>
                                 <li>Please do not claim that you drew the commissioned artworks.</li>
                             </ul>
                         </div>
