Added new portfolio image

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <div class="general text-lists" data-aos="fade-up"> <p>General</p><br>
                         <div class="tos-list-container box-mid">
                             <ul>
-                                <li>Female Only.</li>
+                                <li>Female characters are prefered, I can draw male too but the result will be not as good as female.</li>
                                 <li>Only 1 character.</li>
                                 <li>Strictly No Echi and or NSFW.</li>
                                 <li>No humongous oppai and or thicc thighs.</li>
