--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
         <!--Comission section-->
         <div id="commission">
-            <div class="text-title" data-aos="fade-up"><p>Commission</p></div>
+            <div class="text-title comm-title" data-aos="fade-up"><p>Commission</p></div>
             <!-- This was the most hardest script to make-->
             <div class="region-container" data-aos="fade-up">
                 <a id="Outdonesia" class="animation-change-color-region box-bold" onclick="Region('Outdonesia')"><p>USD</p></a>
@@ -233,6 +233,7 @@
                     <div class="general text-lists" data-aos="fade-up"> <p>General</p><br>
                         <div class="tos-list-container box-mid">
                             <ul>
+                                <li>Female characters are prefered, I can draw male too but the result will be not as good as female.</li>
                                 <li>Only 1 character.</li>
                                 <li>Strictly No Echi and or NSFW.</li>
                                 <li>No humongous oppai and or thicc thighs.</li>
@@ -272,20 +273,20 @@
                             <ul>
                                 <li>Both the artist (me) and the client (you) should retain the Copyrights.</li>
                                 <li>You are free to redistribute the artworks.</li>
-                                <li>Unless you choose the "Commercial" category, DO NOT sell or make any profit from the artworks.</li>
+                                <li>Unless you choose the "Commercial" category, <b>DO NOT</b> sell or make any profit from the artworks.</li>
                                 <li>Please do not claim that you drew the commissioned artworks.</li>
                             </ul>
                         </div>
                     </div><br>
                 </div>
                 <div class="agree-container" data-aos="fade-up">
-                    <a class="agree-check-1 box-bold" onclick="Agree()"></a>
+                    <a class="agree-check-1 box-bold"></a>
                     <div class="agree-check-2"><p>I agree with the terms above.</p></div>
                     
                 </div><br><br>
                 <div data-aos="fade-up">
                     <a class="order-btn-enabled box-bold" onclick="ForwardToForm()">Order now</a>
-                    <a class="order-btn-disabled box-bold">Order now</a>
+                    <a class="order-btn-disabled box-bold">(Sorry, the commission is closed)</a>
                 </div>
             </div>        
         </div><br><br><br><br><br><br>
