--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
         <!--Comission section-->
         <div id="commission">
-            <div class="text-title comm-title" data-aos="fade-up"><p>Commission</p></div>
+            <div class="text-title" data-aos="fade-up"><p>Commission</p></div>
             <!-- This was the most hardest script to make-->
             <div class="region-container" data-aos="fade-up">
                 <a id="Outdonesia" class="animation-change-color-region box-bold" onclick="Region('Outdonesia')"><p>USD</p></a>
@@ -280,13 +280,13 @@
                     </div><br>
                 </div>
                 <div class="agree-container" data-aos="fade-up">
-                    <a class="agree-check-1 box-bold"></a>
+                    <a class="agree-check-1 box-bold" onclick="Agree()"></a>
                     <div class="agree-check-2"><p>I agree with the terms above.</p></div>
                     
                 </div><br><br>
                 <div data-aos="fade-up">
                     <a class="order-btn-enabled box-bold" onclick="ForwardToForm()">Order now</a>
-                    <a class="order-btn-disabled box-bold">(Sorry, the commission is closed)</a>
+                    <a class="order-btn-disabled box-bold">Order now</a>
                 </div>
             </div>        
         </div><br><br><br><br><br><br>
