--- a/index.html
+++ b/index.html
@@ -233,37 +233,38 @@
                     <div class="general text-lists" data-aos="fade-up"> <p>General</p><br>
                         <div class="tos-list-container box-mid">
                             <ul>
+                                <li>The estimated time of dilevery is <b>1 weeks to 2 months after I send you the final sketch</b>.</li>
                                 <li>Female characters are prefered, I can draw male too but the result will be not as good as female.</li>
                                 <li>Only 1 character.</li>
                                 <li>Strictly No Echi and or NSFW.</li>
                                 <li>No humongous oppai and or thicc thighs.</li>
-                                <li>Not accepting Chiby, Mecha, Furry, Old Character, Weird Fetishes (sorry, I didn't mean to kinkshame you), Complex Poses, Complex Background, Controversial Topic, and Realistic Style.</li>
-                                <li>No deadlines or rushes.</li>
+                                <li>Not accepting Chibi, Mecha, Furry, Old Character, Weird Fetishes (sorry, I didn't mean to kinkshame you), Complex Poses, Complex Background, Controversial Topic, and Realistic Style.</li>
                             </ul>
                         </div>
                     </div><br>
                     <div class="payment text-lists" data-aos="fade-up"> <p>Payment</p><br>
                         <div class="tos-list-container box-mid">
                             <ul>
-                                <li>Only pay when I accept your commission. Any payment beforehand is considered as donation.</li>
+                                <li>Only pay when I accept your commission.</li>
+                                <li>Additional <b>+$20 or +Rp.100.000</b> for faster commissioning.</li>
                                 <li> Upfront payment:
                                     <ul><br>
-                                        <li style="margin-left:20px;">First, 30% of the total price for the sketch.</li>
-                                        <li style="margin-left:20px;">Second, 40% of the total price for the base shading.</li>
-                                        <li style="margin-left:20px;">Third, 30% of the total price for the final render.</li>
+                                        <li style="margin-left:20px;">First, 30% of the total price after I send you the sketch.</li>
+                                        <li style="margin-left:20px;">Second, 70% of the total price after I send you the final product.</li>
                                     </ul>
                                 </li><br>
                                 <li>Payment via  <span class="highlight-2">PayPal</span>   (International) or  <span class="highlight-1">BRI/DANA/OVO</span>  (Local).</li>
-                                <li>I may cancel or refuse your commission due to any reason.</li>
+                                <li>I may cancel or refuse your commission.</li>
+                                <li>100% Refund is possible.</li>
                             </ul>
                         </div>
                     </div><br>
                     <div class="final-artwork text-lists" data-aos="fade-up"> <p>Final Artwork</p><br>
                         <div class="tos-list-container box-mid">
                             <ul>
-                                <li>Final artworks will be sent after you send the full payment.</li>
-                                <li>Final artworks will be sent in the form of PNG at a full resolution with the source file.</li>
-                                <li>Final artworks will be sent via email.</li>
+                                <li>Final artworks will be sent before you send the full payment.</li>
+                                <li>Final artworks will be sent in the form of PNG at a full resolution with the source file (.kra and .psd).</li>
+                                <li>Final artworks will be sent via email or Google Drive links.</li>
                                 <li>Final artworks will be uploaded to my Instagram, Pixiv, DeviantArt, and other social media at 30% resolution with the addition of watermarks under clients permission.</li>
                             </ul>
                         </div>
