--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <div class="general text-lists" data-aos="fade-up"> <p>General</p><br>
                         <div class="tos-list-container box-mid">
                             <ul>
-                                <li>The estimated time of dilevery is <b>1 weeks to 2 months after I send you the final sketch</b>.</li>
+                                <li>The estimated time of delivery is <b>1 weeks to 2.5 months after I send you the final sketch</b> depending on the complexity.</li>
                                 <li>Female characters are prefered, I can draw male too but the result will be not as good as female.</li>
                                 <li>Only 1 character.</li>
                                 <li>Strictly No Echi and or NSFW.</li>
