--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         <div class="external-links"><br>
             <ul>
                 <li><a id="pixiv" href="https://www.pixiv.net/en/users/60562229" target="_blank" onmouseover="ExternalLinksEnter('pixiv')" onmouseleave="ExternalLinksLeave()"><img src="resource/svg/Pixiv.svg"><p>Pixiv</p></a></li>
-                <li><a id="instagram" href="https://www.instagram.com/raviolimavioli/" target="_blank" onmouseover="ExternalLinksEnter('instagram')" onmouseleave="ExternalLinksLeave()"><img src="resource/svg/instagram.svg"><p>Instagram</p></a></li>
-                <li><a id="twitter" href="https://twitter.com/raviolimavioli" target="_blank" onmouseover="ExternalLinksEnter('twitter')" onmouseleave="ExternalLinksLeave()"><img src="resource/svg/twitter.svg"><p>Twitter</p></a></li>
+                <li><a id="instagram" href="https://www.instagram.com/_ravimo/" target="_blank" onmouseover="ExternalLinksEnter('instagram')" onmouseleave="ExternalLinksLeave()"><img src="resource/svg/instagram.svg"><p>Instagram</p></a></li>
+                <li><a id="twitter" href="https://twitter.com/_ravimo" target="_blank" onmouseover="ExternalLinksEnter('twitter')" onmouseleave="ExternalLinksLeave()"><img src="resource/svg/twitter.svg"><p>Twitter</p></a></li>
                 <li><a id="github" href="https://github.com/RavioliMavioli" target="_blank" onmouseover="ExternalLinksEnter('github')" onmouseleave="ExternalLinksLeave()"><img src="resource/svg/Github.svg"><p>GitHub</p></a></li>
                 <li><a id="kofi" href="https://ko-fi.com/raviolimavioli" target="_blank" onmouseover="ExternalLinksEnter('kofi')" onmouseleave="ExternalLinksLeave()"><img src="resource/svg/Kofi.svg"><p>Ko-fi</p></a></li>
             </ul>
