--- a/index.html
+++ b/index.html
@@ -281,13 +281,13 @@
                     </div><br>
                 </div>
                 <div class="agree-container" data-aos="fade-up">
-                    <a class="agree-check-1 box-bold"></a>
+                    <a class="agree-check-1 box-bold" onclick="Agree()"></a>
                     <div class="agree-check-2"><p>I agree with the terms above.</p></div>
                     
                 </div><br><br>
                 <div data-aos="fade-up">
                     <a class="order-btn-enabled box-bold" onclick="ForwardToForm()">Order now</a>
-                    <a class="order-btn-disabled box-bold">(Sorry, the commission is closed)</a>
+                    <a class="order-btn-disabled box-bold">Order now</a>
                 </div>
             </div>        
         </div><br><br><br><br><br><br>
